--- a/RigelSolarAPI/appsettings.json
+++ b/RigelSolarAPI/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=ESS000N1530610\\SQLEXPRESS;Database=RigelSolar;Trusted_Connection=true;TrustServerCertificate=true;"
   },
+  "JwtSettings": {
+    "SecretKey": "YbTwOurTYwmqvqTYBpaFigpURoYEXGUprauOOyImxCFLbwDLYc",
+    "ExpirationTimeInMinutes": 60,
+    "Issuer": "RigelSolarAPIProjetoFatecTG",
+    "Audience": "RigelSolarAPIProjetoFatecTG"
+  },
   "AllowedHosts": "*"
 }
