--- a/RigelSolarAPI/appsettings.json
+++ b/RigelSolarAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:rigelsolar.database.windows.net,1433;Initial Catalog=rigelsolar;Persist Security Info=False;User ID=rigelsolar;Password=fkS47-qzy5%8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:rigelsolar.database.windows.net,1433;Initial Catalog=rigelsolar;Persist Security Info=False;User ID=rigelsolar;Password=fkS47-qzy5%8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JwtSettings": {
     "SecretKey": "YbTwOurTYwmqvqTYBpaFigpURoYEXGUprauOOyImxCFLbwDLYc",
