feat: envio de fotos e email

--- a/RigelSolarAPI/appsettings.json
+++ b/RigelSolarAPI/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:rigelsolarapi.database.windows.net,1433;Initial Catalog=rigelsolarapi;Persist Security Info=False;User ID=rigelsolar;Password=fkS47-qzy5%8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:rigelsolar.database.windows.net,1433;Initial Catalog=rigelsolar;Persist Security Info=False;User ID=rigelsolar;Password=fkS47-qzy5%8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "RESEND_APITOKEN": "re_fAG6kPQw_AF6AuKUdBxu2piJbPu3DhzCK",
   "JwtSettings": {
     "SecretKey": "YbTwOurTYwmqvqTYBpaFigpURoYEXGUprauOOyImxCFLbwDLYc",
     "ExpirationTimeInMinutes": 60,
