feat: envio de email

--- a/RigelSolarAPI/appsettings.json
+++ b/RigelSolarAPI/appsettings.json
@@ -15,5 +15,12 @@
     "Issuer": "RigelSolarAPIProjetoFatecTG",
     "Audience": "RigelSolarAPIProjetoFatecTG"
   },
+  "SMTP": {
+    "UserName": "rigelsolarteste@gmail.com",
+    "Nome": "Rigel Solar",
+    "Host": "smtp.gmail.com",
+    "Senha": "lbki itzi sacg xftb",
+    "Porta": 587
+  },
   "AllowedHosts": "*"
 }
